--- a/index.html
+++ b/index.html
@@ -384,6 +384,19 @@
                             <button class="btn form-btn">Subscribe</button>
                         </div>
                     </div>
+
+                    <div class="popular-tags">
+                        <h2>Popular Tags</h2>
+                        <div class="tags flex-row">
+                            <span class="tag">Software</span>
+                            <span class="tag">Technology</span>
+                            <span class="tag">Travel</span>
+                            <span class="tag">Ilustration</span>
+                            <span class="tag">Design</span>
+                            <span class="tag">Love</span>
+                            <span class="tag">Project</span>
+                        </div>
+                    </div>
                 </aside>
 
             </div>
@@ -391,6 +404,71 @@
         <!-- End Site Content -->
     </main>
     <!-- End Main Site Section -->
+
+    <!-- Footer -->
+
+    <footer class="footer">
+        <div class="container">
+            <div class="about-us">
+                <h2>About us</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, quam? Nam accusamus repellat aliquid
+                    facere maiores at dolorem laborum sed.
+                </p>
+            </div>
+
+            <div class="newsletter">
+                <h2>Newsletter</h2>
+                <p>
+                    Stay update with our post
+                </p>
+                <div class="form-element">
+                    <input type="text" placeholder="Email">
+                    <span><i class="fas fa-chevron-right"></i></span>
+                </div>
+            </div>
+
+            <div class="instagram">
+                <h2>Instagram</h2>
+                <div class="flex-row">
+                    <img src="./assets/instagram/thumb-card3.png" alt="insta1">
+                    <img src="./assets/instagram/thumb-card4.png" alt="insta2">
+                    <img src="./assets/instagram/thumb-card5.png" alt="insta3">
+                </div>
+                <div class="flex-row">
+                    <img src="./assets/instagram/thumb-card6.png" alt="insta4">
+                    <img src="./assets/instagram/thumb-card7.png" alt="insta5">
+                    <img src="./assets/instagram/thumb-card8.png" alt="insta6">
+                </div>
+            </div>
+
+            <div class="follow">
+                <h2>Follow Us</h2>
+                <p>
+                    Let's us be social
+                </p>
+                <div>
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-youtube"></i>
+                </div>
+            </div>
+        </div>
+
+        <div class="rights flex-row">
+            <h4 class="text-gray">
+                Copyright@2019 All rights reserved | made by <a href="www.triabagus.site">Tria Bagus <i
+                        class="fas fa-globe"></i> Portfolio</a>
+            </h4>
+        </div>
+
+        <div class="move-up">
+            <span><i class="fas fa-arrow-circle-up fa-2x"></i></span>
+        </div>
+    </footer>
+
+    <!-- End Footer -->
 
     <!-- Jquery Library File -->
     <script src="./js/jquery3.4.1.min.js"></script>
